components/profile-controller/config/overlays/kubeflow/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: profiles-kfam
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - headers:
      request:
        add:
          x-forwarded-prefix: /kfam
    match:
    - uri:
        prefix: /kfam/
    rewrite:
      uri: /kfam/
    route:
    - destination:
        # host: service.namespace.svc.cluster.local — index 1 filled by replacement
        host: profiles-kfam.placeholder.svc.cluster.local
        port:
          number: 8081
