components/profile-controller/config/overlays/kubeflow/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: profiles-kfam
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/kubeflow/sa/centraldashboard
  selector:
    matchLabels:
      kustomize.component: profiles
